Added ui to grammar , startScreen , finishingTest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Filingo</string>
+    <string name="logo_text">FILINGO</string>
+    <string name="logo_bottom_text">Gives You Freedom</string>
 </resources>
